[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.10.2", features = [] }
itertools = { version = "0.12.0", features = [] }
num = { version = "0.4.1", features = [] }
